--- a/Ariel Machine Learning Training Module.ipynb
+++ b/Ariel Machine Learning Training Module.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exoplanets and the Search for Chemical Signature of Life using Machine Learning"
+    "# Exoplanets and the Search for Chemical Signature of Life using Machine Learning\n",
+    "\n",
+    "### For a better experience, please view this file using jupyter notebooks, not directly in GitHub   (https://www.anaconda.com/distribution/)"
    ]
   },
   {
